

name:                dawg
version:             0.1.0.0
synopsis:            Directed acyclic word graphs and perfectly hashed string containers based on them.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Andras Kovacs
maintainer:          puttamalac@gmail.com        
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:      Data.DAWG      
  build-depends:        base ==4.6.*, vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, vector-binary-instances ==0.2.1.*, binary ==0.7.*

test-suite test
    main-is:            Test.hs
    type:               exitcode-stdio-1.0
    Build-depends:      dawg == 0.1.*,
                        base == 4.*,
                        QuickCheck == 2.5.*,
                        test-framework-quickcheck2 == 0.3.*,
                        test-framework == 0.8.*,
                        HUnit == 1.2.*,
                        test-framework-hunit == 0.3.*,
                        vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, vector-binary-instances ==0.2.1.*, binary ==0.7.*

benchmark bench-dawg-gen
    main-is:            BenchDawgGen.hs
    Build-depends:      dawg == 0.1.*,
                        base == 4.*,
                        QuickCheck == 2.5.*,
                        test-framework-quickcheck2 == 0.3.*,
                        test-framework == 0.8.*,
                        HUnit == 1.2.*,
                        test-framework-hunit == 0.3.*,
                        criterion ==0.6.*,
                        vector ==0.10.*, containers ==0.5.*, mtl ==2.1.*, vector-binary-instances ==0.2.1.*, binary ==0.7.*
    ghc-options:        -O2
    type:               exitcode-stdio-1.0
